[package]
name = "nara"
version = "0.1.0"
edition = "2021"

[dependencies]
# For system calls.
libc = "0.2.153"
# For AsyncRead, AsyncWrite
futures-io = "0.3.30"
# For AsyncReadExt, AsyncWriteExt
futures-util = { version = "0.3.30", default-features = false, features = ["io"] }

[dev-dependencies]
futures = "0.3.30"

[lib]
name = "nara"

[[example]]
name = "naratest"
