[package]
name = "nara"
version = "0.1.0"
edition = "2021"

[lib]
name = "nara"

[dependencies]
# For system calls.
libc = "0.2.153"
# For AsyncRead, AsyncWrite
futures-io = "0.3.30"
# For AsyncReadExt, AsyncWriteExt
futures-util = { version = "0.3.30", default-features = false, features = ["io"] }
# For TcpSocket (should be in std!)
socket2 = "0.5.6"

[dev-dependencies]
futures = "0.3.30"
criterion = { version = "0.5.1", features = [ "async" ] }
tokio = { version = "1.37.0", features = [ "rt", "sync" ] }

[[example]]
name = "naratest"

[[bench]]
name = "channel_tokio"
harness = false

[[bench]]
name = "channel_nara"
harness = false
